# Inquience

./: CMakeLists.txt  generateProjectFiles.bat
engine/: camera.cpp  camera.h  collisionmanager.cpp  collisionmanager.h  component.cpp  component.h  component_register.cpp  component_register.h  core.cpp  core.h  debug.cpp  debug.h  editor.cpp  editor.h  entity.cpp  entity.h  input.cpp  input.h  luascript.cpp  luascript.h  managed.h  parser.cpp  parser.h  profiler.cpp  profiler.h  renderer.cpp  renderer.h  scene.cpp  scene.h  scenemanager.cpp  scenemanager.h  sound.cpp  sound.h  soundmanager.cpp  soundmanager.h  sprite.cpp  sprite.h  texture.cpp  texture.h  unique_types.cpp  (+1 more)
engine/components/: animator.cpp  animator.h  collider.cpp  collider.h  rigidbody.cpp  rigidbody.h  sprite.cpp  sprite.h  ui.cpp  ui.h
engine/graphics/: color.h  font.cpp  font.h  shader.cpp  shader.h  ui.cpp  ui.h
engine/math/: physics.cpp  physics.h  vec2.cpp  vec2.h
engine/shaders/: default.fs  default.vs  line.vs
game/: client.cpp  client.h  main.cpp  unit.cpp  unit.h
game/derived/: hud.cpp  hud.h  mainmenu.cpp  mainmenu.h
game/res/: example.lua  terrain_tiles.tga  test.tga  ui_elements.tga
game/res/hud/: bg_elements.psd  bg_elements.tga
game/structures/: structure.cpp  structure.h
inquience/: main.cpp
inquience/res/animations/character/: run_left.json  run_right.animation
inquience/res/prefabs/: Read.txt
inquience/res/prefabs/islands/: Island_0.prefab  small_island.prefab
inquience/res/prefabs/walls/: BounceWall_01.prefab
inquience/res/scenes/: default.scene  imgui.ini  mainmenu.json  mainmenu.scene  test_world.json  test_world.scene
inquience/res/scenes/levels/: level_0.scene
inquience/res/scripts/: functions_core.lua
inquience/res/textures/: character_spritesheet.tga  spritesheet.tga  tilemap_placeholder.tga
inquience/res/textures/enviorment/: cloud_00.tga
inquience/res/textures/menu/: mainmenubg.tga
inquience/source/: creature.cpp  creature.h  gamestate.cpp  gamestate.h
inquience/source/components/: healthcomponent.cpp  healthcomponent.h  movementcomponent.cpp  movementcomponent.h
inquience/source/creatures/: player.cpp  player.h
worldbuilder/: main.cpp  wb_editor.cpp  wb_editor.h  wb_editorwindow.cpp  wb_editorwindow.h  wb_editorwindows.cpp  wb_editorwindows.h
worldbuilder/editorwindows/: wb_componenteditorwindow.cpp  wb_componenteditorwindow.h  wb_hierarchyeditorwindow.cpp  wb_hierarchyeditorwindow.h  wb_inspectoreditorwindow.cpp  wb_inspectoreditorwindow.h
